--- a/history.css
+++ b/history.css
@@ -1,15 +1,51 @@
 .his-font {
     color: white;
-    position: relative;
-    right: 200px;
-    top: -5%;
 }
 
-.year {
+.year-r {
+    text-align: right;
     font-size: 25px;
     font-weight: bold;
+    top: -5%;
+    position: relative;
+    right: 250px;
 }
 
-.his-content {
+.year-l {
+    text-align: left;
+    font-size: 25px;
+    font-weight: bold;
+    position: relative;
+    top: 30px;
+    right: -50px;
+}
+
+.his-content-r {
+    text-align: right;
     font-size: 20px;
+    top: -5%;
+    position: relative;
+    right: 250px;
+}
+
+.his-content-l {
+    text-align: left;
+    font-size: 20px;
+    top: 30px;
+    position: relative;
+    right: -50px;
+}
+
+.y-bar {
+    content: "";
+    display: block;
+    height: 500px;
+    width: 15px;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    right: 100px;
+    top: 10px;
+    opacity: 0.7;
 }
